--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     class="fa-solid fa-chevron-right"></i></button>
         </div>
     </section>
+    <button class="full-program-button">see full program</button>
 
     <script src="script.js"></script>
 </body>
